fixed flex-wrap in catalog

--- a/src/components/About.css
+++ b/src/components/About.css
@@ -59,7 +59,7 @@
 }
 
 .cta-btn:hover {
-  background-color: #7c2234 !important;
+  background-color: #b74058 !important;
   transform: translateY(-3px);
 }
 
