--- a/src/components/GiftPackages.css
+++ b/src/components/GiftPackages.css
@@ -17,13 +17,15 @@
   
   .gift-packages-images {
     display: flex;
+    justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
-    justify-content: space-between;
     gap: 20px;
   }
   
   .gift-packages-div {
     flex: 1 1 calc(33.33% - 20px);
+    max-width: calc(33.33% - 20px);
     background-color: #fff;
     border-radius: 10px;
     box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -157,6 +159,7 @@
   @media (max-width: 992px) {
     .gift-packages-div {
       flex: 1 1 calc(50% - 20px);
+      max-width: calc(50% - 20px);
     }
   
     .gift-packages-section-title {
@@ -219,7 +222,8 @@
   
   @media (max-width: 576px) {
     .gift-packages-div {
-      flex: 1 1 100%;
+      flex: 1 1 calc(100% - 20px);
+      max-width: calc(100% - 20px);
     }
   
     .gift-packages-section-title {
