--- a/src/components/HoneyCollection.css
+++ b/src/components/HoneyCollection.css
@@ -17,13 +17,15 @@
 
 .honey-images {
   display: flex;
+  justify-content: center;
+  align-items: center;
   flex-wrap: wrap;
-  justify-content: space-between;
   gap: 20px;
 }
 
 .honey-div {
   flex: 1 1 calc(33.33% - 20px);
+  max-width: calc(33.33% - 20px);
   background-color: #fff;
   border-radius: 10px;
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
@@ -69,7 +71,7 @@
 .add-to-cart-btn {
   display: inline-block;
   padding: 10px 20px;
-  background-color: #007bff;
+  background-color: #7c2234;
   color: #fff;
   border: none;
   border-radius: 5px;
@@ -83,7 +85,7 @@
 }
 
 .add-to-cart-btn:hover {
-  background-color: #0056b3;
+  background-color: #b74058;
   transform: translateY(-2px);
 }
 
@@ -157,6 +159,7 @@
 @media (max-width: 992px) {
   .honey-div {
     flex: 1 1 calc(50% - 20px);
+    max-width: calc(50% - 20px);
   }
 
   .honey-section-title {
@@ -219,7 +222,8 @@
 
 @media (max-width: 576px) {
   .honey-div {
-    flex: 1 1 100%;
+    flex: 1 1 calc(100% - 20px);
+    max-width: calc(100% - 20px);
   }
 
   .honey-section-title {
